# ndless-rs

./: Cargo.toml  README.md  TODO.md  rustfmt.toml
.github/workflows/: ci.yml
async/: Cargo.toml
async/src/: executor.rs  keypad.rs  lib.rs  mpsc.rs
cargo-ndless/: Cargo.toml  README.md
cargo-ndless/src/: armv5te-nspire-eabi.json  cli.rs  files.rs  firebird.rs  install.rs  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
ndless/: Cargo.toml  README.md
ndless-async/: Cargo.toml  README.md
ndless-async/src/: executor.rs  keypad.rs  lib.rs  mpsc.rs  task.rs  timer.rs  yield_now.rs
ndless-freetype/: Cargo.toml  README.md
ndless-freetype/src/: bitmap.rs  bitmap_glyph.rs  error.rs  face.rs  glyph.rs  glyph_slot.rs  lib.rs  library.rs  outline.rs  render_mode.rs  stroker.rs  tt_os2.rs
ndless-handler/: Cargo.toml  README.md
ndless-handler/src/: allocator.rs  lib.rs
ndless-macros/: Cargo.toml  README.md
ndless-macros/src/: lib.rs
ndless-sdl/: Cargo.toml  README.md  build.sh  wrapper.h
ndless-sdl/src/: event.rs  gl.rs  image.rs  keysym.rs  lib.rs  mouse.rs  nsdl.rs  sdl.rs  text.rs  video.rs  wm.rs
ndless-sdl/src/gfx/: framerate.rs  mod.rs
ndless-sdl/src/gfx/primitives/: ll.rs  mod.rs
ndless-static-vars/: Cargo.toml  README.md
ndless-static-vars/src/: lib.rs
ndless-sys/: Cargo.toml  README.md  build.sh
ndless-sys/src/: lib.rs
ndless/src/: file_io.rs  lib.rs
ndless/src/bindings/: env.rs  hw.rs  input.rs  math.rs  mod.rs  msg.rs  ndless.rs  out.rs  thread.rs  timer.rs
ndless/src/file_io/: path.rs  sys_common.rs
ndless/src/file_io/io/: buffered.rs  cursor.rs  error.rs  impls.rs  prelude.rs  util.rs
ndless/src/file_io/sys/: fd.rs  fs.rs  io.rs  os.rs  path.rs  platform.rs
ndless/src/file_io/sys/ext/: io.rs
ndless/src/file_io/sys_common/: fs.rs
src/: handlers.rs  lib.rs  libc.rs
src/bindings/: env.rs  hw.rs  input.rs  math.rs  mod.rs  msg.rs  ndless.rs  out.rs  process.rs  thread.rs  time.rs
src/file_io/: error.rs  fs.rs  io.rs  os.rs  sys.rs  time.rs
src/file_io/io/: util.rs
src/file_io/sys/: fs.rs  memchr.rs  stdio.rs  time.rs
src/file_io/sys/ext/: fs.rs  mod.rs
static-vars/: Cargo.toml  README.md
static-vars/src/: lib.rs
