[package]
name = "ndless-async"
version = "0.1.0"
authors = ["lights0123 <developer@lights0123.com>"]
repository = "https://github.com/lights0123/ndless-rs"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndless = { path = ".." }
[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]
