[package]
name = "cargo-ndless"
version = "0.1.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
log = "0.4.8"
dirs = "2.0.2"
structopt = "0.2.15"
cargo_metadata = "0.7.4"
console = "0.7.5"
indicatif = "0.11.0"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.52"
