[package]
name = "cargo-ndless"
description = "Cargo subcommand for building ndless binaries"
version = "0.1.1"
repository = "https://github.com/lights0123/ndless-rs"
homepage = "https://lights0123.com/ndless-rust/"
license = "MIT OR Apache-2.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
anyhow = "1.0.28"
log = "0.4.8"
dirs = "2.0.2"
structopt = "0.2.15"
env_logger = "0.7.1"
cargo_metadata = "0.7.4"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.52"
os_str_bytes = "2.3.0"
