[package]
name = "ndless-macros"
description = "Macros for Ndless for the TI-Nspire"
version = "0.4.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"
repository = "https://github.com/lights0123/ndless-rs"
homepage = "https://lights0123.com/ndless-rust/"
license = "MIT OR Apache-2.0"
README = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.9"
syn = { version = "1.0.17", features = ["extra-traits", "full"] }
ndless-static-vars = "2.0.0"
cty = "0.1.5"
