[package]
name = "ndless-sdl"
version = "0.1.8"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Kang Seonghoon <public+rust@mearie.org>",
	"Ben Schattinger <developer@lights0123.com>",
]

description = "SDL bindings for Nspire & Ndless"
repository = "https://github.com/lights0123/ndless-rs"
homepage = "https://lights0123.com/ndless-rust/"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
num = { version = "0.2.0", default-features = false }
cty = "0.1.5"
cstr_core = { version = "0.1.2", features = ["alloc"] }
ndless = "0.7.1"
ndless-freetype = "0.1.2"
unicode-segmentation = "1.2.1"
