[package]
name = "ndless-static-vars"
description = "Rust library for storing static, program-wide parameters for Ndless"
version = "2.0.1"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"
repository = "https://github.com/lights0123/ndless-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cty = "0.2.0"
